--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Miles Q. Li (李琦)"
   avatar           : "IMG_6635.JPG"
-  bio              : "Ph.D., Deep learning researcher, at DMaS Lab, McGill University"
+  bio              : "Ph.D., Deep learning researcher, foundation model expert"
   location         : "Montreal"
   employer         :
   pubmed           : 
